# core

./: Makefile.am  configure.ac
src/imap/: imap-client.c
src/lib-storage/: Makefile.am  mail-storage-register.c  mailbox-list-register.c
src/lib-storage/index/: Makefile.am
src/lib-storage/index/exmdbc/: Makefile.am  exmdb_client_c.cpp  exmdb_client_c.h  exmdbc-attribute.c  exmdbc-attribute.h  exmdbc-list.c  exmdbc-list.h  exmdbc-mail-fetch.c  exmdbc-mail.c  exmdbc-mail.h  exmdbc-mailbox.c  exmdbc-mailbox.h  exmdbc-msgmap.c  exmdbc-msgmap.h  exmdbc-save.c  exmdbc-search.c  exmdbc-search.h  exmdbc-settings.c  exmdbc-settings.h  exmdbc-storage.c  exmdbc-storage.h  exmdbc-sync.c  exmdbc-sync.h
